# slam

./: CMakeLists.txt  README.md  package.xml
map/: 2012-01-20-07-55-23-map
msg/: PointNamed.msg
src/task_1/: observer.cpp  observer.py  runner.cpp  runner.py
src/task_2/: observer.cpp  runner.cpp
src/task_3/: observer.cpp  runner.cpp
src/task_4/: observer.py  runner.py
